<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenuFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/computer_game_button"
        style="@style/Button"
        android:layout_marginBottom="8dp"
        android:text="@string/computer_game_text"
        app:layout_constraintBottom_toTopOf="@+id/difficulty_chip_group"
        app:layout_constraintEnd_toEndOf="@+id/difficulty_chip_group"
        app:layout_constraintStart_toStartOf="@+id/difficulty_chip_group" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/difficulty_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:checkedChip="@id/chip_easy"
        app:chipSpacing="12dp"
        app:layout_constraintBottom_toTopOf="@+id/hotseat_game_button"
        app:layout_constraintEnd_toEndOf="@+id/hotseat_game_button"
        app:layout_constraintStart_toStartOf="@+id/hotseat_game_button"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_easy"
            style="@style/ChipChoice"
            android:layout_height="wrap_content"
            android:text="@string/chip_easy" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_hard"
            style="@style/ChipChoice"
            android:layout_height="wrap_content"
            android:text="@string/chip_hard" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hotseat_game_button"
        style="@style/Button"
        android:layout_marginBottom="32dp"
        android:text="@string/hotseat_game_text"
        app:layout_constraintBottom_toTopOf="@+id/score_button"
        app:layout_constraintEnd_toEndOf="@+id/score_button"
        app:layout_constraintStart_toStartOf="@+id/score_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/score_button"
        style="@style/Button"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:text="@string/score_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>