<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.GameFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.GameFragment">


            <TextView
                android:id="@+id/first_heap_title_text"
                style="@style/TextHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/headline_margin_start"
                android:layout_marginTop="@dimen/headline_margin_top"
                android:text="@string/first_heap_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipgroup_first_heap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/chipgroup_margins_side"
                android:layout_marginTop="@dimen/chipgroup_margin_top"
                android:layout_marginEnd="@dimen/chipgroup_margins_side"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_heap_title_text" />

            <TextView
                android:id="@+id/second_heap_title_text"
                style="@style/TextHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/headline_margin_start"
                android:layout_marginTop="@dimen/headline_margin_top"
                android:text="@string/second_heap_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipgroup_first_heap" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipgroup_second_heap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/chipgroup_margins_side"
                android:layout_marginTop="@dimen/chipgroup_margin_top"
                android:layout_marginEnd="@dimen/chipgroup_margins_side"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second_heap_title_text" />

            <TextView
                android:id="@+id/third_heap_title_text"
                style="@style/TextHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/headline_margin_start"
                android:layout_marginTop="@dimen/headline_margin_top"
                android:text="@string/third_heap_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipgroup_second_heap" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipgroup_third_heap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/chipgroup_margins_side"
                android:layout_marginTop="@dimen/chipgroup_margin_top"
                android:layout_marginEnd="@dimen/chipgroup_margins_side"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/third_heap_title_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>